- 完善文件选择逻辑;

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TinyXL Player</title>
   <link rel="stylesheet" href="./src/index.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="video-container">
-    <video class="video" controls></video>
+    <video class="player" controls></video>
   </div>
 
   <input type="file" class="video-input" accept="video/*" style="display: none;">
