--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       <p class="title-text">TinyXL Player</p>
       <span class="btn select-btn">Select</span>
     </div>
+    <span class="vname-text"></span>
     <span class="btn close-btn">Close</span>
   </div>
 
   <div class="video-container">
-    <video class="player" controls></video>
+    <video class="player" controls controlsList="nodownload noremoteplayback"></video>
   </div>
 
   <input type="file" class="video-input" accept="video/*" style="display: none;">
