-add keyboard listener: customize the controller;

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <input type="file" class="video-input" accept="video/*" style="display: none;">
 
   <script src="./src/index.js"></script>
+  <script src="./src/scripts/kbEventsListener.js"></script>
 </body>
 </html>
